# libchardet

./: CMakeLists.txt  Makefile.am  chardet-config.h.cmake  chardet-config.h.in  configure.in
src/: Makefile.am
test/: sample1.c
